@@ -1,3 +1,7 @@
+2025-11-07
+Add entry in menu of guild frame.
+Fix
+
 2025-11-05
 MOP Update. All features.
 
